deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: forex-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: forex-app-service
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: forex-app-service
spec:
  selector:
    matchLabels:
      app: forex-app-service
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: forex-app-service
    spec:
      containers:
      - name: forex-app-service
        image: emandere/forex-app-service-{platform}:{buildId}
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets
            mountPath: "/app/secrets"
            readOnly: true
      nodeSelector:
        platform: {platform}
      volumes:
        - name: secrets
          secret:
            secretName: fxaccount
