service.frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: forex-app-service-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: forex-app-service-frontend
