service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forex-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: forex-app-service
