deployment.frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
    rules:
        - http:
            paths:   
            - path: /service
              backend:
                serviceName: forex-app-service-frontend
                servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: forex-app-service-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: forex-app-service-frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: forex-app-service-frontend
spec:
  selector:
    matchLabels:
      app: forex-app-service-frontend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: forex-app-service-frontend
    spec:
      containers:
      - name: forex-app-service
        image: emandere/forex-app-service-{platform}:{buildId}
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets
            mountPath: "/app/secrets"
            readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: fxpracticeaccount
