ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
    rules:
        - http:
            paths:
            - path: /
              backend:
                serviceName: forex-app
                servicePort: 80    
            - path: /service
              backend:
                serviceName: forex-app-service
                servicePort: 80
